test: Updating tabs issues on snapshots, working through issues with overflow on the IE baselines; pfe-band bug?

--- a/elements/pfe-tabs/demo/demo.css
+++ b/elements/pfe-tabs/demo/demo.css
@@ -2,8 +2,8 @@ html {
     scroll-behavior: smooth;
 }
 
-.pfe-jump-links__section--spacer {
-    margin-top: 3em;
+pfe-tabs {
+    margin-bottom: 5em;
 }
 
 @media screen and (max-width: 899px) {
